[package]
name = "evm-bench"
version = "0.1.0"
authors = ["Ziyad Edher <ziyad.edher@gmail.com>"]
edition = "2021"
description = "🚀🪑 evm-bench is a suite of Ethereum Virtual Machine stress tests and benchmarks."
readme = "README.md"
homepage = "https://github.com/ziyadedher/evm-bench"
repository = "https://github.com/ziyadedher/evm-bench"
license-file = "LICENSE"
keywords = ["benchmark", "ethereum", "smart-contracts", "ethereum-contract", "benchmark-framework", "evm", "evm-bytecode"]


[dependencies]
bytes = "1.5.0"
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10.0"
glob = "0.3.1"
hex = "0.4.3"
jsonschema = "0.17.1"
log = "0.4.20"
serde = "1.0.188"
serde_json = "1.0.105"
tabled = "0.14.0"
users = "0.11.0"
