[package]
name = "evm-bench"
version = "1.0.0"
authors = ["Ziyad Edher <ziyad.edher@gmail.com>"]
edition = "2021"
description = "🚀🪑 evm-bench is a suite of Ethereum Virtual Machine stress tests and benchmarks."
readme = "README.md"
homepage = "https://github.com/ziyadedher/evm-bench"
repository = "https://github.com/ziyadedher/evm-bench"
license-file = "LICENSE"
keywords = [
    "benchmark",
    "ethereum",
    "smart-contracts",
    "ethereum-contract",
    "benchmark-framework",
    "evm",
    "evm-bytecode",
]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::profiling",
    "development-tools::testing",
]


[dependencies]
anyhow = "1.0.75"
bollard = "0.14.0"
chrono = "0.4.30"
clap = { version = "4.4.0", features = ["derive"] }
env_logger = "0.10.0"
ethers-core = "2.0.9"
ethers-solc = { version = "2.0.9", features = ["full"] }
futures = "0.3.28"
glob = "0.3.1"
human-panic = "1.2.0"
log = "0.4.20"
semver = "1.0.18"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sysinfo = { version = "0.29.10", features = ["serde"] }
tar = "0.4.40"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
typify = "0.0.13"

# bytes = "1.4.0"
# chrono = "0.4.26"
# clap = { version = "4.4.0", features = ["derive"] }
# env_logger = "0.10.0"
# forge = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
# glob = "0.3.1"
# hex = "0.4.3"
# jsonschema = "0.17.1"
# log = "0.4.20"
# serde = "1.0.188"
# serde_json = "1.0.105"
# tabled = "0.14.0"
# users = "0.11.0"
