[package]
name = "runner-akula"
version = "0.1.0"
edition = "2021"

[dependencies]
akula = { git = "https://github.com/akula-bft/akula" }
bytes = "1.4.0"
clap = "4.3.15"
hex = "0.4.3"

[target.'cfg(target_os = "linux")'.dependencies]
e2p-fileflags = { git = "https://github.com/michaellass/e2p-fileflags" }

[patch.crates-io]
arrayvec = { git = "https://github.com/vorot93/arrayvec", branch = "pop-unchecked" }
ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "impls-3" }

[profile.production]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true
