[tool.poetry]
name = "runner-py-evm"
version = "0.1.0"
description = ""
authors = ["Ziyad Edher <ziyad.edher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
py-evm = { git = "https://github.com/ethereum/py-evm.git", tag = "v0.8.0-beta.1", extras = [
    "eth",
] }
eth-utils = "^2.2"
typer = "^0.9.0"
setuptools = "^68.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
black = "^23.9.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
