[tool.poetry]
name = "runner-py-evm"
version = "0.1.0"
description = ""
authors = ["Ziyad Edher <ziyad.edher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
py-evm = "^0.6.0-alpha.1"

[tool.poetry.dev-dependencies]
mypy = "^1.0.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
